--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.css
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.css
@@ -35,3 +35,7 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.input-buttons-wrap .mat-icon-button {
+    width: 27px;
+}
