--- a/src/main/webapp/app/entities/core/category/category-update.component.html
+++ b/src/main/webapp/app/entities/core/category/category-update.component.html
@@ -1,43 +1,55 @@
-<div class="row justify-content-center">
-    <div class="col-8">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+<div class="create-view-page p-2">
+    <div class="row shadow">
+        <div class="col-md-12">
             <h2 id="jhi-category-heading" jhiTranslate="gatewayApp.coreCategory.home.createOrEditLabel">Create or edit a Category</h2>
-            <div>
-                <jhi-alert-error></jhi-alert-error>
-                <div class="form-group" [hidden]="!category.id">
-                    <label for="id" jhiTranslate="global.field.id">ID</label>
-                    <input type="text" class="form-control" id="id" name="id"
-                        [(ngModel)]="category.id" readonly />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.name" for="field_name">Name</label>
-                    <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="category.name" required/>
-                    <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
+        </div>
+        <div class="col-12 mt-5">
+            <form [formGroup]="categoryFormGroup">
+                <div>
+                    <jhi-alert-error></jhi-alert-error>
+                    <div class="form-group">
+                        <mat-form-field class="w-100">
+                            <input matInput type="text"
+                                   name="name"
+                                   formControlName="name"
+                                   id="field_name"
+                                   placeholder="{{'gatewayApp.coreCategory.name' | translate}}"
+                                    required/>
+                            <mat-error>
+                                Name id <strong>required</strong>
+                            </mat-error>
+                        </mat-form-field>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.description" for="field_description">Description</label>
-                    <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
-                              [(ngModel)]="category.description" ></textarea>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.parent" for="field_parent">Parent</label>
-                    <input type="text" class="form-control" name="parent" id="field_parent"
-                        [(ngModel)]="category.parent" />
-                </div>
-            <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
-                    <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-                </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
-                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-                </button>
-            </div>
-        </form>
+                    <div class="form-group">
+                        <mat-form-field class="w-100">
+                            <textarea matInput rows="5" type="text"
+                                      formControlName="description"
+                                      name="description"
+                                      id="field_description"
+                                      placeholder="{{'gatewayApp.coreCategory.description' | translate}}">
+
+                            </textarea>
+                        </mat-form-field>
+                    </div>
+                    <div class="form-group">
+                        <mat-form-field class="w-100">
+                            <input matInput type="text"
+                                   formControlName="parent"
+                                   name="parent"
+                                   id="field_parent"
+                                   placeholder="{{'gatewayApp.coreCategory.parent' | translate}}">
+                        </mat-form-field>
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button mat-raised-button color="warn" class="mr-3" type="button" id="cancel-save" (click)="previousState()">
+                            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+                        </button>
+                        <button mat-raised-button (click)="save()"
+                            type="submit" id="save-entity" [disabled]="isSaving">
+                            <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+                        </button>
+                    </div>
+            </form>
+        </div>
     </div>
 </div>
