--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -344,6 +344,16 @@
                             </mat-slide-toggle>
                         </div>
                     </div>
+                    <div class="form-group" *ngIf="this.postEditFormGroup.value.id">
+                        <mat-form-field class="full-width">
+                            <input matInput
+                                   formControlName="slug"
+                                   placeholder="URL slug">
+                            <mat-error>
+                                Slug is <strong>required</strong>
+                            </mat-error>
+                        </mat-form-field>
+                    </div>
                     <div class="col-md-12 margin-t-20">
                         <mat-form-field class="full-width">
                             <mat-select placeholder="Format" formControlName="formatId">
