--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -382,6 +382,16 @@
                             </mat-slide-toggle>
                         </div>
                     </div>
+                    <div class="form-group" *ngIf="this.factCheckEditFormGroup.value.id">
+                        <mat-form-field class="full-width">
+                            <input matInput
+                                   formControlName="slug"
+                                   placeholder="URL slug">
+                            <mat-error>
+                                Slug is <strong>required</strong>
+                            </mat-error>
+                        </mat-form-field>
+                    </div>
                     <div class="form-group">
                         <mat-accordion>
                             <mat-expansion-panel>
