--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.css
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.css
@@ -39,3 +39,7 @@
 .input-buttons-wrap .mat-icon-button {
     width: 27px;
 }
+
+.claim-expansion-panel .mat-expansion-panel-body {
+    padding: 0 8px 16px;
+}
