--- a/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
@@ -9,6 +9,11 @@
                     <input type="text" class="form-control" id="id" name="id"
                         [(ngModel)]="degaUser.id" readonly />
                 </div>
+                <div class="form-group" [hidden]="!degaUser.keycloakId">
+                    <label for="id" jhiTranslate="global.field.keycloakid">keycloak_id</label>
+                    <input type="text" class="form-control" id="keycloakid" name="keycloakid"
+                           [(ngModel)]="degaUser.keycloakId" readonly />
+                </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.firstName" for="field_firstName">First Name</label>
                     <input type="text" class="form-control" name="firstName" id="field_firstName"
@@ -111,19 +116,6 @@
                             This field should follow pattern for "Email".
                         </small>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.role" for="field_role">Role</label>
-                    <select class="form-control" id="field_role" name="role" [(ngModel)]="degaUser.roleId"  required>
-                        <option *ngIf="!editForm.value.role" [ngValue]="null" selected></option>
-                        <option [ngValue]="roleOption.id" *ngFor="let roleOption of roles; trackBy: trackRoleById">{{roleOption.name}}</option>
-                    </select>
-                </div>
-                <div [hidden]="!(editForm.controls.role?.dirty && editForm.controls.role?.invalid)">
-                    <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.role?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                    </small>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.organizationDefault" for="field_organizationDefault">Organization Default</label>
