--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -9,13 +9,13 @@
                 <button mat-button mat-raised-button type="button"
                         (click)="saveOrPublish('Draft')"
                         [disabled]="isSaving"
-                        *ngIf="showSave">
+                        *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_EDITOR','ROLE_AUTHOR']>
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
                     jhiTranslate="entity.action.savedraft">Save Draft</span>
                 </button>
                 <button mat-button mat-raised-button color="primary"
                         [disabled]="isSaving"
-                        *ngIf="showPublish" (click)="saveOrPublish('Publish')">
+                        *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_EDITOR']">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
                     jhiTranslate="entity.action.publish">Publish</span>
                 </button>
