--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -9,7 +9,7 @@
                 <button mat-button mat-raised-button type="button"
                         (click)="saveOrPublish('Draft')"
                         [disabled]="isSaving"
-                        *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_EDITOR','ROLE_AUTHOR']>
+                        *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_EDITOR','ROLE_AUTHOR']">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
                     jhiTranslate="entity.action.savedraft">Save Draft</span>
                 </button>
