--- a/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
@@ -98,9 +98,14 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" for="field_isSuperAdmin">Is Super Admin</label>
+                    <input type="checkbox" class="form-control" name="isSuperAdmin" id="field_isSuperAdmin"
+                        [(ngModel)]="degaUser.isSuperAdmin" />
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.emailVerified" for="field_emailVerified">Email Verified</label>
                     <input type="checkbox" class="form-control" name="emailVerified" id="field_emailVerified"
-                        [(ngModel)]="degaUser.emailVerified" />
+                           [(ngModel)]="degaUser.emailVerified" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.email" for="field_email">Email</label>
