--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -19,91 +19,91 @@
                     </span>
 				</a>
 				<ul class="nav-dropdown-items">
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
                         <a routerLink="claim-search" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>pageview</mat-icon>
                             <span>Claim Search</span>
                         </a>
                     </li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
                         <a routerLink="claim" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>record_voice_over</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckClaim">Claim</span>
                         </a>
                     </li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
                         <a routerLink="claimant" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>perm_identity</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckClaimant">Claimant</span>
                         </a>
                     </li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
                         <a routerLink="factcheck" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" >
                             <mat-icon>beenhere</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckFactcheck">Factcheck</span>
                         </a>
                     </li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
                         <a routerLink="rating" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>thumbs_up_down</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckRating">Rating</span>
                         </a>
                     </li>
-					<li>
+					<li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
 						<a routerLink="post" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<mat-icon>assignment</mat-icon>
 							<span jhiTranslate="global.menu.entities.corePost">Post</span>
 						</a>
 					</li>
-					<li>
+					<li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
 						<a routerLink="category" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<mat-icon>category</mat-icon>
 							<span jhiTranslate="global.menu.entities.coreCategory">Category</span>
 						</a>
 					</li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
                         <a routerLink="tag" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>style</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreTag">Tag</span>
                         </a>
                     </li>
-					<li>
+					<li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
 						<a routerLink="format" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<mat-icon>format_shapes</mat-icon>
 							<span jhiTranslate="global.menu.entities.coreFormat">Format</span>
 						</a>
 					</li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">>
                         <a routerLink="media" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>perm_media</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreMedia">Media</span>
                         </a>
                     </li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
                         <a routerLink="status" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>linear_scale</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreStatus">Status</span>
                         </a>
                     </li>
-					<li>
+					<li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
 						<a routerLink="organization" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<mat-icon>nature_people</mat-icon>
 							<span jhiTranslate="global.menu.entities.coreOrganization">Organization</span>
 						</a>
 					</li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
                         <a routerLink="dega-user" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>people</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreDegaUser">User</span>
                         </a>
                     </li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
                         <a routerLinkActive="active" routerLink="role" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>verified_user</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreRole">Role</span>
                         </a>
                     </li>
-                    <li>
+                    <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
                         <a routerLink="role-mapping" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>compare_arrows</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreRoleMapping">Role Mapping</span>
@@ -111,7 +111,8 @@
                     </li>
 				</ul>
 			</li>
-            <li class="nested-menu" [ngClass]="{'open': activeDropdown == 2}">
+            <li class="nested-menu" [ngClass]="{'open': activeDropdown == 2}"
+                *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
                 <a href="javascript:void(0);" (click)="toggleDropdown(2)">
 					<span>
                         <fa-icon [icon]="'user-plus'"></fa-icon>
