--- a/src/main/webapp/app/entities/core/post/post.component.html
+++ b/src/main/webapp/app/entities/core/post/post.component.html
@@ -48,7 +48,7 @@
         </div>
         <div class="content-block-wrap">
             <div class="content-block" *ngFor="let post of posts ;trackBy: trackId">
-                <div class="image-wrap" [style.backgroundImage]="'url('+ post.featuredMedia +')'">
+                <div *ngIf="post.mediaDTO" class="image-wrap" [style.backgroundImage]="'url('+ post.mediaDTO.url +')'">
                 </div>
                 <div class="main-content">
                     <div><h2 [routerLink]="['/post', post.id, 'view' ]">{{post.title}}</h2></div>
