--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -9,16 +9,16 @@
 					</span>
 				</a>
 			</li>
-			<li class="nested-menu" [ngClass]="{'open': activeDropdown == 1}">
-				<a href="javascript:void(0);" (click)="toggleDropdown(1)">
+            <li class="nested-menu" [ngClass]="{'open': activeDropdown == 1}">
+                <a href="javascript:void(0);" (click)="toggleDropdown(1)">
 					<span>
                         <fa-icon [icon]="'th-list'"></fa-icon>
-                        <span jhiTranslate="global.menu.entities.main">
+                        <span jhiTranslate="global.menu.sidenav.factchecking">
                             Entities
                         </span>
                     </span>
-				</a>
-				<ul class="nav-dropdown-items">
+                </a>
+                <ul class="nav-dropdown-items">
                     <li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
                         <a routerLink="claim-search" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>pageview</mat-icon>
@@ -49,6 +49,18 @@
                             <span jhiTranslate="global.menu.entities.factcheckRating">Rating</span>
                         </a>
                     </li>
+                </ul>
+            </li>
+			<li class="nested-menu" [ngClass]="{'open': activeDropdown == 2}">
+				<a href="javascript:void(0);" (click)="toggleDropdown(2)">
+					<span>
+                        <fa-icon [icon]="'th-list'"></fa-icon>
+                        <span jhiTranslate="global.menu.sidenav.core">
+                            Core
+                        </span>
+                    </span>
+				</a>
+				<ul class="nav-dropdown-items">
 					<li *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN','ROLE_ADMINISTRATOR','ROLE_EDITOR','ROLE_AUTHOR']">
 						<a routerLink="post" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<mat-icon>assignment</mat-icon>
@@ -111,9 +123,9 @@
                     </li>
 				</ul>
 			</li>
-            <li class="nested-menu" [ngClass]="{'open': activeDropdown == 2}"
+            <li class="nested-menu" [ngClass]="{'open': activeDropdown == 3}"
                 *jhiHasAnyAuthority="['ROLE_SUPER_ADMIN','ROLE_ADMIN']">
-                <a href="javascript:void(0);" (click)="toggleDropdown(2)">
+                <a href="javascript:void(0);" (click)="toggleDropdown(3)">
 					<span>
                         <fa-icon [icon]="'user-plus'"></fa-icon>
                         <span jhiTranslate="global.menu.admin.main">Administration</span>
